crates/python_parser/tests/snapshots/invalid_syntax@clause_expect_single_statement.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/clause_expect_single_statement.py
---
## AST

```
Module(
    ModModule {
        range: 0..23,
        body: [
            If(
                IfStmt {
                    range: 0..8,
                    test: BooleanLiteral(
                        BooleanLiteralExpr {
                            range: 3..7,
                            value: true,
                        },
                    ),
                    body: [],
                    elif_else_clauses: [],
                },
            ),
            If(
                IfStmt {
                    range: 9..22,
                    test: BooleanLiteral(
                        BooleanLiteralExpr {
                            range: 12..16,
                            value: true,
                        },
                    ),
                    body: [
                        Pass(
                            PassStmt {
                                range: 18..22,
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | if True: if True: pass
  |          ^^ Syntax Error: Expected a simple statement
  |
