crates/python_parser/tests/snapshots/invalid_syntax@decorator_unexpected_token.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/decorator_unexpected_token.py
---
## AST

```
Module(
    ModModule {
        range: 0..34,
        body: [
            With(
                WithStmt {
                    range: 5..22,
                    is_async: true,
                    items: [
                        WithItem {
                            range: 16..17,
                            context_expr: Name(
                                NameExpr {
                                    range: 16..17,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            ExprStmt {
                                range: 19..22,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 19..22,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            Assign(
                AssignStmt {
                    range: 28..33,
                    targets: [
                        Name(
                            NameExpr {
                                range: 28..29,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 32..33,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | @foo
2 | async with x: ...
  | ^^^^^ Syntax Error: Expected class, function definition or async function definition after decorator
3 | @foo
4 | x = 1
  |


  |
2 | async with x: ...
3 | @foo
4 | x = 1
  | ^ Syntax Error: Expected class, function definition or async function definition after decorator
  |
